# SOTA-fun

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  comparability.py  db.py  main.py  models.py  rankings.py  registry.py  resolver.py  schemas.py  settings.py  validation.py
app/routes/: benchmarks.py  models.py  rankings.py  scores.py  snapshots.py  use_cases.py
connectors/: __init__.py  anthropic.py  base.py  bfcl.py  bigcodebench.py  google.py  helm.py  huggingface_open_llm.py  lmarena.py  manual_seed.py  openai.py
data/snapshots/2026-04-27/: benchmark_scores.csv  benchmarks.csv  models.csv  sources.csv
data/snapshots/latest/: benchmark_scores.csv  benchmarks.csv  models.csv  sources.csv
docs/: claude_opus_4_7_seed_notes.md  claude_sonnet_4_6_seed_notes.md  deepseek_v4_pro_seed_notes.md  gdm_xai_meta_xiaomi_opus_4_6_seed_notes.md  glm_5_1_seed_notes.md  gpt_5_5_seed_notes.md  kimi_k2_6_seed_notes.md  minimax_m2_5_seed_notes.md  nemotron_sarvam_seed_notes.md  parameter_metadata_notes.md  qwen3_6_plus_seed_notes.md
pipelines/: __init__.py  discover.py  extract.py  fetch.py  normalize.py  publish.py  validate.py  weekly_update.py
registry/: benchmarks.yaml  labs.yaml  model_aliases.yaml  seed_data.yaml  use_cases.yaml
review/: __init__.py  review_queue.py
scripts/: export_snapshot.py  run_weekly_update.py  seed_db.py
tests/: conftest.py  test_alias_resolution.py  test_exports.py  test_rankings.py  test_schemas.py
