[project]
name = "llm-benchmark-db"
version = "0.1.0"
description = "Canonical, versioned benchmark intelligence database and API for LLM model releases."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "sqlalchemy>=2.0",
  "pyyaml>=6.0",
  "pandas>=2.0",
  "pyarrow>=15.0",
  "typer>=0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
]

[project.scripts]
llm-benchmark-review = "review.review_queue:app"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "connectors*", "pipelines*", "review*"]
exclude = ["data*", "registry*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
